--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v0.8.4 [2023-03-18]
+
+  * Always use "C" locale (fixes 'w' parsing issues)
+
 v0.8.3 [2023-03-18]
 
   * Switch pulseaudio detection to pactl (pipewire-compatible)
